services/auth/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fec-auth
  labels:
    app.kubernetes.io/name: fec-auth
    app.kubernetes.io/part-of: fec-saas
